--- a/src/app/components/weather/weather.component.css
+++ b/src/app/components/weather/weather.component.css
@@ -3,3 +3,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+p{
+    margin: 5px;
+}
+
+.myRadioButtons{
+    display: flex;
+    justify-content: space-around;
+}
